# Atmos-weather-app

./: .gitignore  .gitmodules  .last_pulse  .manifest.sig  README.md  Soma_Strata_Final_Report.txt  acoustic_audit.py  acoustic_shield.py  analyze_sanctuary.C  atmos.jks  blacklist.txt  blocked_ips.txt  blowback_audit.py  buildozer.spec  ci_test.yml  cloud_push.sh  core_weld.py  daemon.sh  dashboard.html  data_vault  deep_time_dashboard.py  deep_time_sync.py  engine-bridge  expansion_growth.py  gcp_pulse.sh  geodesic_path.py  hud_pulse.py  index.html  inject_guardian.py  instrumentarian_audit.py  intel_ledger.txt  league_ops_center.py  lockdown.sh  logic_comeback.py  logic_shield.py  main  manifest.json.void  monitor_fraudsters.sh  monitor_impulse.py  news_pulse.txt  (+29 more)
ADL-Integration/: .gitmodules
Atmos/: .gitmodules  .last_pulse  .seed_lock  Atmos_Manual.md  atmos.jks.base64  (+12 more)
Atmos/Atmos/: Makefile  README.md  gui.py  pyproject.toml  repair.sh  welcome.txt
Atmos/Atmos/src/atmos/: core.py  main.py  plot.py  sovereign_init.py
Atmos/Atmos/system/sovereign/: alert_sentinel.sh  archive.sh  atmos_volatile.sh  audit_final.sh  auto_join.sh  autopilot.sh  boot_init.sh  calibrate_g.sh  decoy_dashboard.sh  decoy_gate.sh  heartbeat_jitter.sh  invite.sh  logo.sh  main.go  mesh_check.sh  morning_report.sh  pulse_checkin.sh  search.go  setup.py  setup_all.sh  shield_check.sh  silent_watch.sh  slough_all.sh  sovereign_tool  start_stack.sh  update.sh  vanish.sh  vault_notify.sh  ​nano tunnel.sh
Atmos/Atmos/tests/: test_core.py
Atmos/app/src/main/cpp/: CMakeLists.txt  atmos_jni.cpp
(+235 files in other folders)
