[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "atmos"
version = "0.1.0"
description = "Professional atmospheric simulation for Termux"
authors = [{name = "Joseph Gazafy"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]
requires-python = ">=3.10"

[project.scripts]
atmos = "atmos.main:main"

[tool.setuptools.packages.find]
where = ["src"]


